# laravel.pv122.com/app/Http/Controllers/API/CategoryController.php
@@ -186,4 +186,80 @@ class CategoryController extends Controller
         $file->delete();
         return response()->json(['message' => 'категорію видалено']);
     }
+
+    /**
+     * @OA\Post(
+     *     tags={"Category"},
+     *     path="/api/category/edit/{id}",
+     *    security={{ "bearerAuth": {} }},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the category to update",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"name"},
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Update Category.")
+     * )
+     */
+    public function edit($id, Request $request)
+    {
+        //отримуємо дані із запиту(name, image, description)
+        $input = $request->all();
+        $file = Category::findOrFail($id);
+
+        $messages = array(
+            'name.required' => 'Вкажіть назву категорії!',
+            'description.required' => 'Вкажіть опис категорії!'
+        );
+        $validator = Validator::make($input, [
+            'name' => 'required',
+            'description' => 'required'
+
+        ], $messages);
+
+        if ($validator->fails()) {
+            return response()->json($validator->errors(), 400);
+        }
+
+        $newFileName = uniqid().'.'.$request->file("image")->getClientOriginalExtension();
+        $sizes = [50, 150, 300, 600, 1200];
+        foreach ($sizes as $size) {
+            $fileName = $_SERVER['DOCUMENT_ROOT'].'/uploads/'.$size.'_'.$file["image"];
+            if (is_file($fileName)) {
+                unlink($fileName);
+            }
+            $this->image_resize($size,$size,$_SERVER['DOCUMENT_ROOT'].'/uploads/'.$size.'_'.$newFileName, 'image');
+        }
+        $file->image=$newFileName;
+        $file->name = $input['name'];
+        $file->description = $input['description'];
+        $file->save();
+
+        return response()->json($file);
+    }
 }
